--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
     --verde: #00A859;
     --blanco: #FEFEFE;
     --gris: #3A4651;
-    /*falta agregar rojo*/
+    --rojo: #ba1a1a;
 }
 
 body {
@@ -20,44 +20,125 @@ body {
     background-color: var(--verde);
 }
 
-
-
 header img {
     width: 150px;
-    padding: 20px 0px 20px 0px;
-    
+    padding: 20px 0px 20px 0px;    
 }
+
 header{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     gap: 30px;
     align-items: center;
+    padding: 0 20px 0 20px;
 }
 
 
-.centrado {
-    margin: 0 auto;
-    width: 1200px;
-}
+
 img{
     width: 150px;
 }
+/* ------------------------------------------------------------------------ MENU------------------------------------------------------------- */
 .itemActivo{
     border-bottom: 2px solid #00A859;
 }
-.prueba:hover{
-    --Iconsax-Color: #2d00a8 ;
+
+/* --------------------------------------------------------------------ICONOS------------------------------------------------------------- */
+
+.menuIconos{
+    padding: 0 0.5em 0 0.5em;
+   
+}
+.menuIconos:hover{
+    --Iconsax-Color: var(--gris) ;
+    
   
 }
-
-.iconos{
+/* .iconos{
     display: inline-block;
     margin: 50px;
-}
+} */
 svg:hover .pruebaFill{
     fill: red;
 }
 svg:hover .pruebaStroke{
     stroke:red;
+}
+
+
+
+
+
+
+
+
+
+
+/* ---------------------------------------------- MEDIAS QUERYS---------------------------------------------------------------------------------- */
+
+/* -----------------------------------------------RESOLUCION 576----------------------------------------------------------------------------------*/
+
+@media screen and (min-width: 576px) {
+
+
+
+   
+}
+
+/* -------------------------------------------------RESOLUCION 768------------------------------------------------------------------------------ */
+@media screen and (min-width: 768px) {
+
+
+    nav ul {
+        list-style-type: none;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    nav ul li {
+        flex: 1;
+    }
+    
+    nav ul li a,
+    nav ul li a:link {
+        text-decoration: none;
+        display: block;
+        text-align: center;
+        padding: 0.5em;
+        font-weight: bold;
+        letter-spacing: 0.2rem;
+        color: var(--gris);
+        /* background-color: var(--blanco); */
+        font-size: 1.3rem;
+        border-bottom: 1px solid var(--gris);
+        box-sizing: border-box;
+    }
+    
+    nav ul li a:hover {
+        background-color: var(--gris);
+        color: white;
+    }
+
+
+   
+}
+
+
+/* ------------------------------------------------RESOLUCION 992------------------------------------------------------------------------------- */
+@media screen and (min-width: 992px) {
+    
+
+}
+
+/* -------------------------------------------RESOLUCION 1200---------------------------------------------------------------------------------- */
+@media screen and (min-width: 1200px) {
+    
+    .centrado {
+        margin: 0 auto;
+        width: 1200px;
+    }
+
+
+
 }
