--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Alegreya Sans', sans-serif;
+    font-weight: normal;
 }
 
 
@@ -22,123 +24,299 @@ body {
 
 header img {
     width: 150px;
-    padding: 20px 0px 20px 0px;    
+    padding: 20px 0px 20px 0px;
 }
 
-header{
+header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 30px;
+    gap: 15px;
     align-items: center;
     padding: 0 20px 0 20px;
 }
 
+.lineasMenu,
+.menuDerecha {
+    width: 20vw;
+}
 
+.menuDerecha {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+}
 
-img{
+.lineasMenu button {
+    background-color: var(--verde);
+    border: none;
+}
+
+img {
     width: 150px;
 }
+
 /* ------------------------------------------------------------------------ MENU------------------------------------------------------------- */
-.itemActivo{
-    border-bottom: 2px solid #00A859;
+#itemActivo {
+    border-top: none;
+    border-right: 1px solid var(--gris);
+    color: var(--gris);
+    background-color: var(--blanco);
 }
+
+nav {
+    background-color: var(--verde);
+    display: none;
+    flex-direction: column;
+    width: 50vw;
+}
+
+nav ul {
+    list-style-type: none;
+}
+
+nav ul li a,
+nav ul li a:link {
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    border-bottom: 1px solid var(--gris);
+    box-sizing: border-box;
+    padding: 0.5em;
+    color: var(--blanco);
+    font-weight: bold;
+    font-size: 1.3rem;
+    font-family: 'Andada Pro', serif;
+}
+
+
+nav button {
+    background-color: var(--verde);
+    border: none;
+    border-bottom: 1px solid var(--gris);
+    border-top: 1px solid var(--gris);
+    padding: 0.6em;
+}
+
+.visible {
+    display: flex;
+
+}
+
 
 /* --------------------------------------------------------------------ICONOS------------------------------------------------------------- */
 
-.menuIconos{
-    padding: 0 0.5em 0 0.5em;
-   
+.menuIconos {
+    padding: 0 0.2em 0 0.2em;
 }
-.menuIconos:hover{
-    --Iconsax-Color: var(--gris) ;
-    
-  
+
+.menuIconos:hover {
+    --Iconsax-Color: var(--gris);
 }
-/* .iconos{
-    display: inline-block;
-    margin: 50px;
-} */
-svg:hover .pruebaFill{
+
+svg:hover .pruebaFill {
     fill: red;
 }
-svg:hover .pruebaStroke{
-    stroke:red;
+
+svg:hover .pruebaStroke {
+    stroke: red;
 }
 
+/* --------------------------------------------------------------------SLIDER--------------------------------------------------------------- */
+/* ----------------------------------------------------------------SECCION NOVEDADES-------------------------------------------------------- */
+.seccionNovedades h2 {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.seccionNovedades h2 {
+    color: var(--verde);
+    margin-left: 1em;
+    margin-top: 1em;
+    font-weight: bold;
+}
+
+#novedades {
+    padding: 0 1em 2em 1em;
+    display: grid;
+    grid-template: repeat(3, 1fr)/repeat(1, 1fr);
+    grid-gap: 20px;
+}
+
+#novedades article div {
+    padding: 0.2em 0.5em 0.2em 0.5em;
+}
+
+#novedades article div figure {
+    overflow: hidden;
+
+}
+
+#novedades article div figure img {
+    width: 100%;
+    object-fit: cover;
+    height: 40vh;
+    margin-top: 2em;
+    box-sizing: border-box;
+    border-radius: 0 25px 0 25px;
+}
+
+#novedades article div h3 {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    color: var(--verde);
+}
+/* ----------------------------------------------------------------SECCION OFERTAS---------------------------------------------------------- */
 
 
+/* --------------------------------------------------------------------FOOTER--------------------------------------------------------------- */
 
+footer {
+    background-color: var(--verde);
+    color: var(--blanco);
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+footer div {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+}
 
+footer .teMail {
+    display: none;
+    flex-direction: row;
+    align-items: center;
+}
 
+.teMail p {
+    padding: 10px;
+}
 
-
+.redes>a {
+    padding: 0.2em;
+}
 
 /* ---------------------------------------------- MEDIAS QUERYS---------------------------------------------------------------------------------- */
 
 /* -----------------------------------------------RESOLUCION 576----------------------------------------------------------------------------------*/
 
-@media screen and (min-width: 576px) {
-
-
-
-   
-}
+@media screen and (min-width: 576px) {}
 
 /* -------------------------------------------------RESOLUCION 768------------------------------------------------------------------------------ */
 @media screen and (min-width: 768px) {
 
+    /* -----------------------------MENU--------------------------------------------------------------- */
+    #itemActivo {
+
+        border-bottom: 2px solid var(--verde);
+        border-right: none;
+        color: var(--verde);
+        background-color: var(--blanco);
+    }
+
+    nav {
+        background-color: var(--blanco);
+        display: block;
+        width: 100vw;
+    }
 
     nav ul {
         list-style-type: none;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
     }
-    
+
     nav ul li {
         flex: 1;
     }
-    
+
     nav ul li a,
     nav ul li a:link {
+        border: none;
         text-decoration: none;
         display: block;
         text-align: center;
-        padding: 0.5em;
-        font-weight: bold;
-        letter-spacing: 0.2rem;
-        color: var(--gris);
-        /* background-color: var(--blanco); */
-        font-size: 1.3rem;
-        border-bottom: 1px solid var(--gris);
         box-sizing: border-box;
+        padding: 0.5em;
+        color: var(--gris);
+        font-weight: bold;
+        font-size: 1.3rem;
     }
-    
+
     nav ul li a:hover {
         background-color: var(--gris);
-        color: white;
+        color: var(--blanco);
     }
 
+    nav button {
+        display: none;
+    }
 
-   
+    .lineasMenu {
+        display: none;
+    }
+
+    /* -----------------------------SECCION NOVEDADES--------------------------------------------------------------- */
+    .seccionNovedades h2 {
+        margin-left: 8px;
+    }
+
+    #novedades {
+        padding: 0em;
+        grid-template: repeat(1, 1fr)/repeat(4, 1fr);
+        margin-bottom: 20px;
+    }
+
+    #novedades article div:hover {
+        border-radius: 0 25px 0 25px;
+        background-color: var(--gris);
+    }
+
+    #novedades article div:hover h3 {
+        color: var(--blanco);
+    }
+    
+
+    /* -----------------------------FOOTER--------------------------------------------------------------- */
+
+    footer>div {
+        gap: 48vw;
+    }
+
+    footer .teMail {
+        display: flex;
+    }
+
 }
 
 
 /* ------------------------------------------------RESOLUCION 992------------------------------------------------------------------------------- */
 @media screen and (min-width: 992px) {
-    
+    .menuDerecha {
+        width: 10vw;
+    }
+
+   
 
 }
 
 /* -------------------------------------------RESOLUCION 1200---------------------------------------------------------------------------------- */
 @media screen and (min-width: 1200px) {
-    
+
     .centrado {
         margin: 0 auto;
         width: 1200px;
     }
 
-
+    footer>div {
+        gap: 20vw;
+    }
 
 }
