--- a/css/style.css
+++ b/css/style.css
@@ -257,11 +257,12 @@ svg:hover .pruebaStroke {
     gap: 20px;
     overflow-x: auto;
     scroll-behavior: smooth;
-    margin-top: 1em;
+    margin-top: 50px;
     justify-content: center;
 }
 .categoriaScroll{
     flex: 0 0 auto;
+    margin: 10px;
 }
 
 
