--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,28 @@ nav button {
     padding-right: 10px;
 }
 
+.carrito {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: flex-end;
+    position: relative;
+}
+
+.carrito span {
+    color: var(--verde);
+    background-color: var(--blanco);
+    border-radius: 100px;
+    width: 15px;
+    height: 15px;
+    text-align: center;
+    position: absolute;
+    bottom: -0.2em;
+    left: 1.3em;
+    font-size: 0.8em;
+    display: block;
+}
+
 /* ------------------------------------------------------SECCION CATEGORIAS-----------------------------------------------------------------------*/
 
 #categorias {
@@ -287,16 +309,10 @@ nav button {
     flex-direction: column;
     justify-content: center;
     z-index: 9000;
-
 }
-
-
-
 
 .fondoInicio {
     background-color: var(--verde);
-
-
 }
 
 .filtroMobile>.fondoInicio {
@@ -479,12 +495,12 @@ nav button {
 
 .imgPrincipal {
     margin-bottom: 1.5em;
-    
+
 }
 
 .imgPrincipal img {
     width: 100%;
-     
+
     border-radius: 0 50px 0 50px;
 }
 
@@ -564,6 +580,7 @@ nav button {
 }
 
 /* <!-- -------------------------------------------------SECCION VENTA CRUZADA DETALLE-------------------------------------------------- --> */
+/* <!-- -------------------------------------------------SECCION VENTA CRUZADA CARRITO-------------------------------------------------- --> */
 
 .vtaCruzadadetalle {
     display: flex;
@@ -638,7 +655,113 @@ nav button {
     font-size: 1.2em;
 }
 
-/* --------------------------------------------------------------------FOOTER--------------------------------------------------------------- */
+/* ---------------------------------------------------------SECCION ARTICULOS EN CARRITO---------------------------------------------------- */
+
+.carritoResumen {
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+}
+
+.artCarrito {
+    margin-bottom: 2em;
+    margin-top: 2em;
+}
+
+.artCarrito article {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    margin-bottom: 2em;
+}
+
+.artCarrito article figure {
+    width: 50%;
+    padding: 0.5em;
+
+}
+
+.artCarrito article figure img {
+    width: 100%;
+    height: 100%;
+    border-radius: 0 25px 0 25px;
+}
+
+.precioMobile {
+    margin-top: 2em;
+    font-size: 1.2em;
+    font-weight: bolder;
+}
+
+.descripcionCarrito div:first-child p {
+    margin: 2em auto;
+}
+
+.descripcionCarrito div:first-child p:last-child .menuIconos {
+    --Iconsax-Color: var(--gris);
+    --Iconsax-Size: 20px;
+}
+.descripcionCarrito div:first-child p:last-child span{
+    padding: 0 0.5em 0 0.5em;
+}
+.bototesEliminarFav {
+    display: flex;
+    flex-direction: column;
+}
+
+#btnEliminar {
+    margin: 2em 0 2em 0;
+}
+
+.precioDesktop {
+    display: none;
+}
+
+.formResumen {
+    width: 100%;
+    color: var(--gris);
+    padding: 0.5em;
+    box-sizing: border-box;
+}
+
+.tituloResumen {
+    text-align: center;
+}
+
+.tituloResumen hr,
+.formResumen hr {
+    border: 1px solid var(--gris);
+    margin: 1em 0 1em 0;
+}
+
+.subTotal,
+.envio,
+.total {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 2em;
+}
+
+.total p {
+    font-weight: bold;
+}
+
+.formResumen input[type="button"] {
+    background-color: var(--verde);
+    border: none;
+    color: var(--blanco);
+    border-radius: 0 20px 0 20px;
+    width: 100%;
+    text-align: center;
+    padding: 0.5em;
+    margin: 0.5em auto;
+    font-size: 1.2em;
+}
+
+
+/* --------------------------------------------------------------------FOOTER------------------------------------------------------------ */
 
 footer {
     background-color: var(--verde);
@@ -680,7 +803,7 @@ footer .teMail {
 /* -------------------------------------------------RESOLUCION 768------------------------------------------------------------------------------ */
 @media screen and (min-width: 768px) {
 
-    /* -----------------------------MENU--------------------------------------------------------------- */
+    /* -----------------------------MENU-768--------------------------------------------------------------- */
     #itemActivo {
 
         border-bottom: 2px solid var(--verde);
@@ -732,7 +855,7 @@ footer .teMail {
         display: none;
     }
 
-    /* -----------------------------SLIDER------------------------------------------------------------------------------------------ */
+    /* -----------------------------SLIDER-768------------------------------------------------------------------------------------------ */
     .slider {
         background: RGBA(100, 100, 100, 0.6) url(../img/slider1.jpg) no-repeat center center;
         background-blend-mode: multiply;
@@ -813,7 +936,7 @@ footer .teMail {
         }
     }
 
-    /* -----------------------------SECCION NOVEDADES--------------------------------------------------------------- */
+    /* -----------------------------SECCION NOVEDADES-768--------------------------------------------------------------- */
     .seccionNovedades h2 {
         margin-left: 8px;
     }
@@ -838,7 +961,7 @@ footer .teMail {
         height: 30vh;
     }
 
-    /* -----------------------------SECCION OFERTAS--------------------------------------------------------------- */
+    /* -----------------------------SECCION OFERTAS-768--------------------------------------------------------------- */
     #fondoOfertas {
         padding: 5em 0 5em 0;
     }
@@ -879,12 +1002,12 @@ footer .teMail {
     }
 
 
-    /* ---------------------------- SECCION ICONO FILTRO MOBILE------------------------------------------ */
+    /* ---------------------------- SECCION ICONO FILTRO MOBILE-768------------------------------------------ */
     .iconoFiltro {
         display: none;
     }
 
-    /* ---------------------------- SECCION CATEGORIAS------------------------------------------ */
+    /* ---------------------------- SECCION CATEGORIAS-768------------------------------------------ */
     #categorias {
         justify-content: center;
         margin-top: 3em;
@@ -900,7 +1023,7 @@ footer .teMail {
 
     }
 
-    /* ------------------------------------------SECCION FILTROS------------------------------------------*/
+    /* ------------------------------------------SECCION FILTROS-768------------------------------------------*/
     .filtroMobile {
         width: 60%;
         height: 50%;
@@ -918,11 +1041,9 @@ footer .teMail {
     .filtroMobile>.fondoInicio {
         background-color: var(--verde);
         padding: 1em;
-
-
     }
 
-    /* -------------------------------------SECCION ARTICULOS------------------------------ */
+    /* -------------------------------------SECCION ARTICULOS-768------------------------------ */
 
     .dosSecciones {
         display: flex;
@@ -978,7 +1099,7 @@ footer .teMail {
         ;
     }
 
-    /* ---------------------------------DETALLE ARTICULO--------------------------------------------------- */
+    /* ---------------------------------DETALLE ARTICULO-768--------------------------------------------------- */
     .datos {
         flex-direction: row;
     }
@@ -1009,27 +1130,30 @@ footer .teMail {
 
     }
 
-    /* <!-- ---------------------------------SECCION VENTA CRUZADA DETALLE-------------------------------------------------- --> */
+    /* <!-- ---------------------------------SECCION VENTA CRUZADA DETALLE-768 -------------------------------------------------- --> */
+    /* <!-- ---------------------------------SECCION VENTA CRUZADA CARRITO-768 -------------------------------------------------- --> */
 
     .articulosVtaDetalle article {
-        width: 20%;        
+        width: 20%;
     }
 
-     .articulosVtaDetalle article:hover {
+    .articulosVtaDetalle article:hover {
         background-color: var(--verde);
-    } 
-    .articulosVtaDetalle article:hover>div:last-child h3{
+    }
+
+    .articulosVtaDetalle article:hover>div:last-child h3 {
         color: var(--blanco);
     }
 
-    .articulosVtaDetalle article:hover .precioIcono .menuIconos{
+    .articulosVtaDetalle article:hover .precioIcono .menuIconos {
         --Iconsax-Color: var(--blanco);
     }
-    .articulosVtaDetalle article:hover .precioIcono p{
+
+    .articulosVtaDetalle article:hover .precioIcono p {
         color: var(--blanco);
     }
 
-    .articulosVtaDetalle article div figure{
+    .articulosVtaDetalle article div figure {
         padding: 0.5em;
     }
 
@@ -1048,12 +1172,9 @@ footer .teMail {
 
     .articulosVtaDetalle article>div:last-child h3 {
         color: var(--verde);
-       
     }
-   
 
     .precioIcono {
-        
         margin: 0.5em 0 0.5em 0;
         color: var(--verde);
     }
@@ -1063,14 +1184,57 @@ footer .teMail {
         margin: 0;
     }
 
-   
-
     .precioIcono p {
         font-size: 1em;
         margin: 0;
     }
 
-    /* -----------------------------FOOTER--------------------------------------------------------------- */
+
+    /* ----------------------------------SECCION ARTICULOS EN CARRITO-768---------------------------------------------------- */
+
+    .carritoResumen {
+        flex-direction: row;
+        place-items: flex-start;
+        margin-left: 0.5em;
+        justify-content: center;
+    }
+
+    .artCarrito article {
+        background-color: var(--verde);
+        border-radius: 0 50px 0 50px;
+        padding: 0.5em;
+    }
+
+    .descripcionCarrito {
+        width: 30%;
+        padding: 0 1em 1em 1em;
+        color: var(--blanco);
+    }
+    .descripcionCarrito div:first-child p:last-child .menuIconos {
+        --Iconsax-Color: var(--blanco);
+    }
+   
+    .artCarrito {
+        width: 65%;
+        margin-right: 0.5em;
+    }
+
+    .formResumen {
+        width: 30%;
+    }
+
+    .tituloResumen {
+        margin-top: 2em;
+    }
+    .formResumen input[type="button"]:hover {
+        background-color: var(--gris);
+    }
+    
+
+
+
+
+    /* -----------------------------FOOTER-768--------------------------------------------------------------- */
 
     footer>div {
         gap: 48vw;
@@ -1123,7 +1287,7 @@ footer .teMail {
         border-radius: 0 25px 0 25px;
     }
 
-    /* ---------------------------------DETALLE ARTICULO--------------------------------------------------- */
+    /* ---------------------------------DETALLE ARTICULO-992--------------------------------------------------- */
     .datos {
         flex-direction: row;
     }
@@ -1162,16 +1326,43 @@ footer .teMail {
         margin-top: 2em;
     }
 
-    /* <!-- ---------------------------------SECCION VENTA CRUZADA DETALLE-------------------------------------------------- --> */
+    /* <!-- ---------------------------------SECCION VENTA CRUZADA DETALLE-992-------------------------------------------------- --> */
+    /* <!-- ---------------------------------SECCION VENTA CRUZADA CARRITO-992-------------------------------------------------- --> */
     .articulosVtaDetalle article div figure img {
         height: 20vh;
     }
 
     .precioIcono {
         justify-content: space-between;
-
     }
+
+    /* -----------------------------------------SECCION ARTICULOS EN CARRITO-992--------------------------------------------------- */
+
+    
+    .descripcion {
+        color: var(--blanco);
+    }
+
+    .precioMobile {
+        display: none;
+    }
+
+    .precioDesktop {
+        display: flex;
+        align-items: center;
+        color: var(--blanco);
+        font-size: 1.3em;
+        font-weight: bolder;
+    }
+  
+    .artCarrito article figure {
+        width: 40%;
+    }
+
 }
+
+
+
 
 /* -------------------------------------------RESOLUCION 1200---------------------------------------------------------------------------------- */
 @media screen and (min-width: 1200px) {
@@ -1207,7 +1398,7 @@ footer .teMail {
         text-align: center;
     }
 
-    /* <!-- ---------------------------------SECCION VENTA CRUZADA DETALLE-------------------------------------------------- --> */
+    /* <!-- ---------------------------------SECCION VENTA CRUZADA DETALLE-1200-------------------------------------------------- --> */
     .articulosVtaDetalle article div figure img {
 
         height: 30vh;
