correcion img no se veian, carrito terminado,checkout initial

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,13 @@ header {
     background-color: var(--verde);
     border: none;
 }
-
+/* ----------------------------HEADER CHECKOUT---------------------------------- */
+#checkout{
+    color: var(--verde);  
+}
+#checkout .menuIconos{
+    --Iconsax-Color: var(--verde);
+}
 
 
 /* ------------------------------------------------------------------------ MENU------------------------------------------------------------- */
@@ -803,6 +809,18 @@ footer .teMail {
 /* -------------------------------------------------RESOLUCION 768------------------------------------------------------------------------------ */
 @media screen and (min-width: 768px) {
 
+    /* ----------------------------HEADER CHECKOUT-768 --------------------------------- */
+#checkout{
+    color: var(--blanco);  
+}
+#checkout .menuIconos{
+    --Iconsax-Color: var(--blanco);
+}
+#chevronLeft .menuIconos{
+  display: none;
+}
+
+
     /* -----------------------------MENU-768--------------------------------------------------------------- */
     #itemActivo {
 
@@ -1112,6 +1130,9 @@ footer .teMail {
     .descripcion>div>p {
         display: block;
     }
+    .descripcion, .nombrePrecio {
+        color: var(--gris);
+    }
 
     .botonera input[type="button"]:last-child {
         background: url(../iconos/heart.svg) no-repeat 2% center;
@@ -1129,6 +1150,8 @@ footer .teMail {
         border-bottom: 2px solid var(--gris);
 
     }
+     
+  
 
     /* <!-- ---------------------------------SECCION VENTA CRUZADA DETALLE-768 -------------------------------------------------- --> */
     /* <!-- ---------------------------------SECCION VENTA CRUZADA CARRITO-768 -------------------------------------------------- --> */
@@ -1207,8 +1230,9 @@ footer .teMail {
 
     .descripcionCarrito {
         width: 30%;
-        padding: 0 1em 1em 1em;
+        padding: 1em 1em 1em 1em;
         color: var(--blanco);
+        
     }
     .descripcionCarrito div:first-child p:last-child .menuIconos {
         --Iconsax-Color: var(--blanco);
@@ -1230,10 +1254,6 @@ footer .teMail {
         background-color: var(--gris);
     }
     
-
-
-
-
     /* -----------------------------FOOTER-768--------------------------------------------------------------- */
 
     footer>div {
@@ -1249,6 +1269,15 @@ footer .teMail {
 
 /* ------------------------------------------------RESOLUCION 992------------------------------------------------------------------------------- */
 @media screen and (min-width: 992px) {
+
+    /* ----------------------------HEADER CHECKOUT-992 --------------------------------- */
+    #checkout{
+        width: 20%;
+    }
+
+
+
+
     .menuDerecha {
         width: 10vw;
     }
@@ -1337,11 +1366,6 @@ footer .teMail {
     }
 
     /* -----------------------------------------SECCION ARTICULOS EN CARRITO-992--------------------------------------------------- */
-
-    
-    .descripcion {
-        color: var(--blanco);
-    }
 
     .precioMobile {
         display: none;
